--- a/src/pages/Recipe/Recipe.css
+++ b/src/pages/Recipe/Recipe.css
@@ -9,7 +9,7 @@
   gap: 0.5rem;
   flex-wrap: wrap;
   display: flex;
-  align-items: baseline;
+  align-items: center;
 }
 
 /* Ingredients */
